--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -9,26 +9,28 @@
     <link rel="stylesheet" href="./css/1-timer.css" />
   </head>
   <body>
-    <a href="./index.html">Main</a>
-    <input type="text" id="datetime-picker" />
-    <button type="button" data-start>Start</button>
+    <a href="./index.html" class="main">Main</a>
+    <div class="calendar">
+      <input type="text" id="datetime-picker" />
+      <button type="button" data-start>Start</button>
+    </div>
 
     <div class="timer">
       <div class="field">
         <span class="value" data-days>00</span>
-        <span class="label">Days</span>
+        <span class="label">DAYS</span>
       </div>
       <div class="field">
         <span class="value" data-hours>00</span>
-        <span class="label">Hours</span>
+        <span class="label">HOURS</span>
       </div>
       <div class="field">
         <span class="value" data-minutes>00</span>
-        <span class="label">Minutes</span>
+        <span class="label">MINUTES</span>
       </div>
       <div class="field">
         <span class="value" data-seconds>00</span>
-        <span class="label">Seconds</span>
+        <span class="label">SECONDS</span>
       </div>
     </div>
 
